force-app/main/default/objects/Deployment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deployment_Error__c</fullName>
        <label>Deployment Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Id__c</fullName>
        <label>Deployment Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Deployment No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Deployment Details</relationshipLabel>
        <relationshipName>Deployment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <formula>Deployment__r.Destination_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <formula>Deployment__r.Source_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Error__c</fullName>
        <label>Test Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Deployment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deployment_No__c</columns>
        <columns>Status__c</columns>
        <columns>Source_Org__c</columns>
        <columns>Destination_Org__c</columns>
        <columns>Deployment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>